<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiniAgenda</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nuevo">Nuevo</string>
    <string name="vertodo">Ver Todo</string>
    <string name="eliminar">Eliminar uno</string>
    <string name="elimtodo">eliminar todo</string>
    <string name="title_activity_main_activity2">MainActivity2</string>

    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>


    <string name="agregar">Agregar</string>
    <string name="limpiar">Limpiar</string>


</resources>
